plugins {
    id 'tapestry.junit5-spock-convention'
}

description = 'Test suite for making sure Tapestry runs on latest Java'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }

    withSourcesJar()
}

tasks.withType(JavaCompile).configureEach {
    options.release = 17
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += '--enable-preview'
}

tasks.withType(Test).configureEach {
    jvmArgs += '--enable-preview'
}

dependencies {
    testImplementation project(':tapestry-ioc')
}
